# graphite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  main_plugins.cpp
src/Core/Application/: CMakeLists.txt  ILayer.hpp  TGraphiteApplication.hpp  WindowConfiguration.hpp
src/Core/Application/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Renderer.mm
src/Core/Application/Renderer/Backends/Metal/: MetalRenderer.hpp  MetalRenderer.mm  MetalRendererState.mm
src/Core/Application/Renderer/Backends/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
src/Core/Common/: CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.hpp  GraphiteExport.hpp  UniqueID.cpp  UniqueID.hpp
src/Core/Logger/: Ansi.cpp  Ansi.hpp  CMakeLists.txt  LogFormatter.cpp  LogFormatter.hpp  Logger.cpp  Logger.hpp
src/core/: CMakeLists.txt
src/core/Common/: CMakeLists.txt  UniqueID.cpp  UniqueID.hpp
src/core/LibUtils/: CMakeLists.txt  GraphiteExport.hpp
src/core/application/: ApplicationLayer.hpp  CmakeLists.txt  GraphiteApplication.cpp  GraphiteApplication.hpp  ILayer.hpp  TGraphiteApplication.hpp  WindowConfiguration.hpp
src/core/application/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Renderer.mm
src/core/application/renderer/backends/metal/: MetalRenderer.hpp  MetalRenderer.mm
src/core/application/renderer/backends/vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
src/core/lib-utils/: CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.hpp
src/core/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/core/plugin/: CMakeLists.txt  DummyPlugin.cpp  DynamicLibrary.hpp  IPlugin.hpp
src/core/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Renderer.mm
src/core/renderer/backends/metal/: MetalRenderer.hpp  MetalRenderer.mm  MetalRendererState.mm
src/core/renderer/backends/vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
src/core/utils/: CMakeLists.txt  UniqueID.cpp  UniqueID.hpp
src/demo/: BasicTableApp.hpp  CMakeLists.txt  DemoAppV1.hpp  Playground.hpp
src/demo/calculator/: CalculatorApp.cpp  CalculatorApp.hpp
src/demo/calculator/states/: Calculator.cpp  Calculator.hpp
src/demo/plugin/: CMakeLists.txt  DummyPlugin.cpp  IPlugin.hpp  main_plugins.cpp
src/project/: AppState.hpp  CMakeLists.txt  PlayersApplication.cpp  PlayersApplication.hpp
src/project/layers/: MainLayer.cpp  MainLayer.hpp  PlayerEditLayer.cpp  PlayerEditLayer.hpp
